--- a/site/blueprints/site.yml
+++ b/site/blueprints/site.yml
@@ -1,3 +1,12 @@
-title: Site
-preset: pages
+title: Vivek - Design Showcase
+icon: page
+sections:
+  published:
+    headline: Published
+    type: pages
+    layout: cards
+    info: "{{ page.year }}"
 unlisted: true
+options:
+  preview: https://bajju.info
+
