fixed image width
added fixed width captions & alt tags

--- a/site/blueprints/files/gallery-image.yml
+++ b/site/blueprints/files/gallery-image.yml
@@ -10,7 +10,7 @@ fields:
     type: text
     width: 1/2
   caption:
-    type: text
+    type: textarea
     width: 1/2
   photographer:
     type: text
