--- a/composer.json
+++ b/composer.json
@@ -33,9 +33,11 @@
     ]
   },
   "config": {
+    "smartypants": true,
     "optimize-autoloader": true,
     "allow-plugins": {
       "getkirby/composer-installer": true
     }
+
   }
 }
